# pensieve

./: .gitignore  .pre-commit-config.local.yaml.example  .pre-commit-config.yaml  LICENSE  README.md  RELEASE.md  build_executable.py  build_pensieve.py  index.html  index.xml  install-hooks.sh  install-skill.sh  pensieve.spec  pyproject.toml  sitemap.xml
.github/workflows/: hugo-deploy.yml  release-macos.yml
Formula/: pensieve.rb
categories/: index.html  index.xml
css/: style.css
demos/: index.html  index.xml
demos/session-1-date-ambiguity/: index.html
demos/session-2-european-data/: index.html
demos/session-3-excel-dates/: index.html
docs/: goals.md  hugo.yaml
docs/content/: _index.md
docs/layouts/: index.html
getting-started/: index.html  index.xml
hooks/: README.md  git-commit-memory-check.sh  memory-check.sh  session-end-memory-check.sh  session-memory-reminder.sh  todo-memory-check.py  todo-memory-check.sh  user-prompt-memory-check.sh
js/: chat-animation.js
reference/: index.html  index.xml
reference/goals/: index.html
scripts/: pre-commit-strict.sh
src/pensieve/: __init__.py  cli.py  cli_helpers.py  database.py  graph_traversal.py  landscape.py  migration_runner.py  models.py  path_utils.py  (+3 more)
tags/: index.html  index.xml
tests/: __init__.py  test_cli.py  test_cli_helpers.py  test_cli_refs.py  test_database.py  test_entry_resolver.py  test_graph_traversal.py  test_landscape.py  test_models.py  test_path_utils.py  test_ref_models.py  test_ref_resolver.py  test_tag_statistics.py  test_validators.py
why/: index.html  index.xml
(+24 files in other folders)
